# msa-proteoform-profiler

./: .gitignore  README.md  pyproject.toml
src/msapp/: cli.py  gconst.py  imgmagic.py  main_cli.py  main_gui.py  msa.py  visualize.py
src/msapp/controller/: controller.py
src/msapp/model/: domains.py  img_processing.py  mat_manipulation.py  msa.py
src/msapp/view/: msapp_gui.py  out.py  visualization.py
tests/: test_msapp.py
