[tool.poetry]
name = "msapp"
version = "0.1.0"
description = "msa proteoform profiler"
authors = ["Yong Feng", "Lea Morschel"]
readme = "README.md"
packages = [{include = "msapp", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9"
pytest = "^7.4.3"
argparse = "^1.4.0"
opencv-python = "^4.9.0.80"
seaborn = "^0.13.0"
scikit-learn = "^1.3.2"
customtkinter = "^5.2.1"
matplotlib = "^3.8.2"
numpy = "^1.26.2"
scipy = "^1.11.4"
biopython = "^1.81"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
msapp = "msapp.main_cli:run"
msapp-gui = "msapp.main_gui:run"
